# learn-windows-sys

./: Cargo.toml
examples/basic_window/: Cargo.toml
examples/basic_window/src/: main.rs
examples/direct_2d/: Cargo.toml
examples/direct_2d/src/: hammer.rs  main.rs
examples/game_direct3d12/: Cargo.toml
examples/game_direct3d12/src/: main.rs
examples/test_tokio/: Cargo.toml
examples/test_tokio/src/: main.rs
number_into_words/: Cargo.toml
signal/: Cargo.toml
signal/examples/web_signal/: Cargo.toml
signal/examples/web_signal/src/: main.rs
signal/src/: lib.rs
src/: main.rs
windows_reactive/: Cargo.toml
windows_reactive/src/: button.rs  com_initialized.rs  device_context_ext.rs  direct_2d.rs  droppable.rs  errors.rs  game.rs  hwnd_builder.rs  lib.rs  message_ext.rs  messages.rs  param_ext.rs  pcwstr_handler.rs  pre_settings.rs  rect_ext.rs  test.rs  text.rs  user_data_ext.rs  window.rs  window_handle.rs  window_handle_ext.rs  window_handle_getter.rs
windows_reactive/src/graphics/: bitmap.rs  brush.rs  conv.rs  device_context.rs  direct_2d_device.rs  direct_2d_device_context.rs  direct_2d_factory.rs  direct_3d_device.rs  dxgi_swap_chain.rs  geometry.rs  mod.rs  stroke_style.rs
windows_stuff/: Cargo.toml
windows_stuff/src/: caption_title.rs  hit_test_nca.rs  lib.rs  register_window_class.rs  window_state.rs
windows_xaml/: Cargo.toml
windows_xaml/src/: main.rs
