[package]
name = "learn-windows-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    'signal',
    'signal/examples/web_signal',
    'examples/basic_window',
    'windows_xaml'
]

[dependencies]
windows_stuff = { path = "./windows_stuff" }
windows_reactive = { path = "./windows_reactive" }