[package]
name = "windows_reactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm"
]
[dependencies]
bitflags = "2.2.1"
windows_stuff = { path = "../windows_stuff" }
signal = { path = "../signal" }