[package]
name = "web_signal"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
leptos_dom =  { version = "0.3.0", features = ["stable", "web"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4.17"
wasm-bindgen = "0.2.86"
web-sys = "0.3.63"
signal = { path = "../../" }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"